--- a/TechScreen.Web/BootstrapMaster.Master
+++ b/TechScreen.Web/BootstrapMaster.Master
@@ -6,16 +6,9 @@
 <head id="Head1" runat="server">
     <title></title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <%--<link href="Content/DataTable/media/css/themes/smoothness/jquery-ui-1.7.2.custom.css"
-        rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="Scripts/jquery-1.7.1.js"></script>
-    <script src="Content/DataTable/media/js/jquery-ui.js" type="text/javascript"></script>
-    <link href="Content/DataTable/media/css/demo_table_jui.css" rel="stylesheet" type="text/css" />
-    <script src="Content/DataTable/media/js/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="Content/DataTable/media/js/jquery.dataTables.custom.js" type="text/javascript"></script>--%>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css" />
-    <link rel="stylesheet" href="Content/Site.css" />
+    <%--<link rel="stylesheet" href="Content/Site.css" />--%>
     <link rel="stylesheet" href="Content/Style.css" />
     <link rel="stylesheet" href="Content/loadmask/jquery.loadmask.css" />
     <link rel="stylesheet" href="Content/menu/menu.css" />
@@ -23,44 +16,13 @@
 
     <script type="text/javascript" src="Scripts/jquery-1.7.1.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
     <script src="Content/DataTable/jquery.dataTables.min.js"></script>
     <script src="Content/DataTable/jquery.dataTables.custom.js"></script>
-
     <script type="text/javascript" src="Content/loadmask/jquery.loadmask.min.js"></script>
-    
-
     <script type="text/javascript" src="Content/menu/menu.js"></script>
     <script type="text/javascript" src="Content/chosen/chosen.jquery.js"></script>
     <style type="text/css">
-        div.dataTables_length label {
-            width: 460px;
-            float: left;
-            text-align: left;
-        }
-
-        div.dataTables_length select {
-            width: 75px;
-        }
-
-        div.dataTables_filter label {
-            float: right;
-            width: 460px;
-        }
-
-        div.dataTables_info {
-            padding-top: 8px;
-        }
-
-        div.dataTables_paginate {
-            float: right;
-            margin: 0;
-        }
-
-        table {
-            margin: 1em 0;
-            clear: both;
-        }
+       
     </style>
     <asp:ContentPlaceHolder runat="server" ID="HeadContent" />
 </head>
@@ -80,7 +42,6 @@
         </div>
         <p>
         </p>
-        <br />
         <div class="content-main">
             <div id="menu">
                 <ul class="menu">
@@ -157,8 +118,7 @@
                         <span>Contacts</span></a></li>
                 </ul>
             </div>
-            <div style="clear: both">
-            </div>
+         
 
             <asp:ContentPlaceHolder runat="server" ID="FeaturedContent" />
             <div class="content-body">
@@ -167,7 +127,7 @@
                 </div>
             </div>
         </div>
-        <br />
+      
         <br />
         <footer class="footer-bar">
             <div class="content-wrapper">
